--- a/style.css
+++ b/style.css
@@ -4,103 +4,13 @@
       background: #dadada;
       font-family: 'Segoe UI', Arial, sans-serif;
     }
-    .sidebar {
-      position: fixed;
-      left: 0; top: 0; bottom: 0;
-      width: 245px;
-      height: 100vh;
-      background: #232323 url('fundo.jpg') no-repeat center center;
-      background-size: cover;
-      color: #fff;
-      z-index: 10;
-    }
-    .sidebar-top {
-      background: #ffd000;
-      color: #181818;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      font-size: 1.16rem;
-      padding: 22px 18px 18px 18px;
-      height: 75px;
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
-    }
-    .sidebar-top img {
-      height: 34px;
-      margin-right: 13px;
-    }
-    .sidebar-search {
-      margin: 15px 18px 6px 18px;
-    }
-    .sidebar-search input[type="text"] {
-      width: 100%;
-      background: #363636;
-      border: none;
-      color: #eee;
-      border-radius: 5px;
-      padding: 8px 10px;
-      font-size: 1.02rem;
-      outline: none;
-    }
-    .sidebar-menu {
-      margin: 10px 0 0 0;
-      padding: 0 0 0 2px;
-      list-style: none;
-    }
-    .sidebar-menu li {
-      margin-bottom: 3px;
-    }
-    .sidebar-menu a {
-      display: flex;
-      align-items: center;
-      color: #fff;
-      text-decoration: none;
-      padding: 11px 18px;
-      font-size: 1.05rem;
-      border-radius: 7px 0 0 7px;
-      transition: background .13s, color .13s;
-    }
-    .sidebar-menu a.active, .sidebar-menu a:hover {
-      background: #ffd000;
-      color: #181818;
-      font-weight: 600;
-    }
-    .sidebar-menu i {
-      margin-right: 11px;
-      font-size: 1.25rem;
-    }
-    .sidebar-menu a.active i {
-      color: #181818;
-    }
-    .sidebar-footer {
-      position: absolute;
-      left: 0;
-      bottom: 10px;
-      width: 100%;
-      text-align: center;
-      color: #bbb;
-      font-size: 1.04rem;
-      padding-bottom: 6px;
-    }
-    .sidebar-footer a {
-      color: #fff;
-      text-decoration: none;
-      display: inline-block;
-      margin: 0 auto;
-      transition: color .12s;
-    }
-    .sidebar-footer a:hover { color: #ffd000; }
-
     /* Main panel */
-    .content {
-      margin-left: 275px;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-    }
+  .content {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
     .panel {
       width: 780px;
       background: #fff;
@@ -219,20 +129,6 @@
       padding: 4px 7px;
       border-radius: 4px;
     }
-    @media (max-width: 1100px) {
-      .sidebar {width: 185px;}
-      .content {margin-left: 185px;}
-      .panel {width: 97vw;}
-    }
-    @media (max-width: 900px) {
-      .content {margin-left: 0;}
-      .sidebar {position: static; width: 100vw; min-width: unset;}
-      .panel {margin: 12px 1vw;}
-    }
-    @media (max-width: 650px) {
-      .panel {min-width: 0; width: 99vw;}
-      .adicionar-row {flex-direction:column; gap:10px;}
-    }
     footer {
       text-align: center;
       color: #585858;
@@ -240,3 +136,5 @@
       margin: 9px 0;
       padding: 3px 0 6px 0;
     }
+
+    
